# multi-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  setup.py
.marscode/: deviceInfo.json
docs/: api.md  modelscope_mcp_integration.md  multi-agent-framework-design-insights.md  quickstart_modelscope_mcp.md
examples/agents/: researcher.yaml  writer.yaml
examples/config/: mcp_servers_modelscope.yaml
examples/demo/: README.md  builtin_tools_demo.py  graphrag_rag_demo.py  llm_with_builtin_tools_demo.py  single_agent_demo.py  single_agent_simple_demo.py  single_agent_tools_demo.py  tools_server.py
examples/mcp-servers/: servers.yaml
examples/modelscope_mcp/: .gitkeep  README.md  ai_search_demo.py  amap_demo.py  search_demo.py
examples/workflows/: react_workflow.yaml  reflection_workflow.yaml
output/debug/: test_summary.md  test_summary_updated.md
specs/001-multi-agent-framework/: data-model.md  implementation-summary.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-agent-framework/checklists/: requirements.md
specs/001-multi-agent-framework/contracts/: agent.yaml  mcp-tools.yaml  workflow.yaml
src/multi_agent/: __init__.py
src/multi_agent/agent/: __init__.py  base.py  patterns.py  session.py  supervisor.py
src/multi_agent/cli/: __init__.py  checkpoint.py  main.py  task.py  trace.py
src/multi_agent/config/: __init__.py  loader.py  paths.py  schemas.py
src/multi_agent/execution/: __init__.py  hitl.py  orchestrator.py  parallel.py  task.py  workflow.py
src/multi_agent/graphrag_rag/: __init__.py  agent.py  client.py  utils.py
src/multi_agent/models/: __init__.py  agent.py  checkpoint.py  session.py  state.py  task.py  tool.py  tracer.py  workflow.py
src/multi_agent/state/: __init__.py  base.py  machine.py  manager.py  serializer.py
src/multi_agent/tools/: __init__.py  fallback.py  mcp_client.py  mcp_manager.py  mcp_streamable_http.py
src/multi_agent/tools/builtin/: __init__.py  registry.py  result.py
src/multi_agent/tools/builtin/file/: __init__.py  info.py  list.py  read.py  write.py
src/multi_agent/tools/builtin/network/: __init__.py  fetch.py
src/multi_agent/tools/builtin/programming/: __init__.py  calculate.py  execute.py
src/multi_agent/tools/builtin/system/: __init__.py  env.py  processes.py  time.py
src/multi_agent/tracing/: __init__.py  metrics.py  tracer.py
src/multi_agent/utils/: __init__.py  id.py  logging.py  retry.py  timeout.py
tests/: conftest.py  test_api.py
tests/integration/: test_agent_execution.py  test_agent_execution_mock.py  test_streamable_http_mcp_integration.py  test_us1_single_agent.py  test_us2_supervisor.py  test_us3_fault_tolerance.py  test_us4_tracing.py  test_us5_hitl.py  test_us6_workflows.py  test_us7_parallel.py
tests/unit/: test_models.py  test_state_machine.py
tests/unit/test_tools/: __init__.py  test_builtin_registry.py  test_file_tools.py  test_llm_format_validation.py  test_mcp_streamable_http_transport.py  test_parallel_execution.py  test_sse_aggregator.py  test_tool_executor_integration.py
